static/css/style.css
/* ... */
			
			#slogan-section-3 .goprice a{
				color:#f89406;
				font-size:140%;
			
			}
			
			#slogan-section-1 .goprice a{
				color:#f89406;
				font-size:140%;
			
			}
/********************************* NAVIGATION MENU *************************************/
			
			.navbar-fixed-top .navbar-inner,  .navbar-static-top .navbar-inner {
				-webkit-box-shadow: none;
				-moz-box-shadow: none;
				box-shadow: none;
				background-color: rgba(0, 0, 0, 0.3);
				background: rgba(0, 0, 0, 0.3) url(../img/line_bg.png) top left repeat;
				background-image:url(../img/line_bg.png) top left repeat;
				padding-top:10px;
				padding-bottom:10px;
				border-bottom: none;
				-moz-transition: padding 0.5s ease-in-out;
				-o-transition: padding 0.5s ease-in-out;
				-webkit-transition: padding 0.5s ease-in-out;
				-ms-transition: padding 0.5s ease-in-out;
				transition: padding 0.5s ease-in-out;
				z-index:1030;
				filter: none;
			}
			
			.navbar-static-top{
				position:relative;
			}
			.navbar-inner.navbar-scroll {
				border-top: none;
				background:rgba(0, 0, 0, 0.7) url(../img/line_bg.png) top left repeat;
				padding-bottom:5px;
				padding-top:5px;
				-moz-transition: padding 0.5s ease-in-out;
				-o-transition: padding 0.5s ease-in-out;
				-webkit-transition: padding 0.5s ease-in-out;
				-ms-transition: padding 0.5s ease-in-out;
				transition: padding 0.5s ease-in-out;
			}
			
			.navbar .nav > li > a {
				float: none;
				padding: 5px 15px 5px;
				color: #fff; font-weight: 400;
				text-decoration: none;
				text-shadow: 0 1px 0 #000;
				text-transform:uppercase;
				margin-right:5px;
				margin-top:5px;
				-moz-transition: all 0.3s ease;
				-o-transition: all 0.3s ease;
				-webkit-transition: all 0.3s ease;
				-ms-transition: all 0.3s ease;
				transition: all 0.3s ease;
				}
				
				.navbar .nav > .active > a  {
					color: #fff;
					text-decoration: none;
					background-color: #f89406;
					-webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.125);
					-moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.125);
					box-shadow: 0 3px 8px rgba(0, 0, 0, 0.125);
					padding: 5px 15px 5px;
					margin-top:5px;
					}
				
				 .navbar .nav > li > a:hover,  .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
					color: #fff;
					text-decoration: none;
					background-color: #f89406;
					-webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.125);
					-moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.125);
					box-shadow: 0 3px 8px rgba(0, 0, 0, 0.125);
					padding: 8px 15px 8px;
					margin-top:3px;
					}
					
					.navbar .brand {
						
						font-weight: 400;
						background: url(../img/logo-bg.png) top left no-repeat;
						padding:5px 15px 12px 150px;
						margin-left:-120px;
						margin-right:30px;
						text-shadow: 0 1px 0 #000;
						color: #fff;
						display:inline-block;
						padding-right:40px;
						background-size:100% 100%;
						/*-webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
						-moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
						box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);*/
						}
			
			.scroller-spy {
			
			}
			
			#main-nav select{
				display:none;
			}
			
			.dropdown-menu {
				position: absolute;
				top: 120%;
				color:#fff;
				
				z-index: 1000;
				display: none;
				float: left;
				min-width: 160px;
				padding: 5px 0;
				margin: 2px 0 0;
				list-style: none;
				background:rgba(0, 0, 0, 0.7) url(../img/line_bg.png) top left repeat;
				border: 1px solid #ccc;
				border: 1px solid rgba(0, 0, 0, 0.2);
				-webkit-border-radius: 1px;
				-moz-border-radius: 1px;
				border-radius: 1px;
				-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
				-moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
				box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
				-webkit-background-clip: padding-box;
				-moz-background-clip: padding;
				background-clip: padding-box;
				}
				
				.navbar .nav > li > .dropdown-menu:before {
					position: absolute;
					top: -7px;
					left: 9px;
					display: inline-block;
					border-right: 7px solid transparent;
					border-bottom: 7px solid rgba(0, 0, 0, 0.3);
					border-left: 7px solid transparent;
					border-bottom-color: rgba(0, 0, 0, 0.2);
					content: '';
					}
					
					.navbar .nav > li > .dropdown-menu:after {
					position: absolute;
					top: -6px;
					left: 10px;
					display: inline-block;
					border-right: 6px solid transparent;
					border-bottom: 6px solid rgba(0, 0, 0, 0.3);
					border-left: 6px solid transparent;
					content: '';
					}
					
/******************************** CUSTOM SLIDER STYLE ******************************/
		
		.carousel {
			overflow: hidden;
			-webkit-border-radius: 3px;
			-moz-border-radius: 3px;
			border-radius: 3px;
		}
		.carousel-control {
			position: absolute;
			top: 50%;
			-webkit-border-radius: 0px;
			-moz-border-radius: 0px;
			border-radius: 0px;
			}
			.carousel-inner{
				overflow:hidden;
				position: relative;
				width: 100%;
				-webkit-border-radius: 3px;
				-moz-border-radius: 3px;
				border-radius: 3px;
			}
			
			.carousel-inner > .item > img, .carousel-inner > .item > a > img {
				-webkit-border-radius: 3px;
				-moz-border-radius: 3px;
				border-radius: 3px;
			}
			
				.carousel:hover .carousel-control.right {
					right: 0px;
				}
					.carousel-control.right {
					right: -47px;
					left: auto;
					transition: all 0.2s;
					-moz-transition: all 0.2s;
					-webkit-transition: all 0.2s;
					-o-transition: all 0.2s;
				}
				
				
				.carousel:hover .carousel-control.left {
					left: 0px;
				}
				
				.carousel-control.left {
					left: -47px;
					right: auto;
					transition: all 0.2s;
					-moz-transition: all 0.2s;
					-webkit-transition: all 0.2s;
					-o-transition: all 0.2s;
				}
		
		/**************************** TYPOGRAPHY ******************************************/
		
		body, html{
			font-family:  'Roboto', sans-serif;
		}
		
		.fa-icon-xxlarlge {
			font-size:140px;
		}
/* ... */

